@@ -1,6 +1,8 @@
  ** pq_exec_params: For queries, information on postgresql data types
     of columns is also returned.
 
+ ** New converters for bit string types (bit, varbit).
+
  ** New converters for network types (cidr, inet, macaddr).
 
  ** New converters for geometric types (point, lseg, (line,) box,
